--- a/djangoreactproject/frontend/src/components/Navbar.module.css
+++ b/djangoreactproject/frontend/src/components/Navbar.module.css
@@ -28,3 +28,10 @@
     display: flex;
     align-items: center;
 }
+
+.textDecor{
+    font-size: 45px;
+    margin-top: 15px;
+    font-weight: bold;
+    color:rebeccapurple;
+}
