--- a/djangoreactproject/frontend/src/components/Search.module.css
+++ b/djangoreactproject/frontend/src/components/Search.module.css
@@ -1,13 +1,20 @@
 .inputs{
     border: none;
     height: 60px;
-    width: 10%;
-    margin-left: 0.5px;
+    width: 15%;
+
     text-align: center;
+
+}
+
+.inputContainer{
+    margin-left: 20%;
 }
 
 .inputRight{
     border-radius: 0 20px 20px 0;
+    font-size: 16px;
+    font-weight: bold;
 }
 
 .inputLeft{
@@ -24,7 +31,7 @@
 }
 
 .dateInput{
-    padding: 0.5px 0 1.5px 0;
+    padding: 1px 0 1px 0;
 }
 
 .inputCont{
