--- a/djangoreactproject/frontend/src/components/TicketItem.module.css
+++ b/djangoreactproject/frontend/src/components/TicketItem.module.css
@@ -4,45 +4,25 @@
     margin-left: 20%;
     color: indigo;
     #border-radius: 30px 30px 30px 30px;
-    box-shadow: 0px 4px 10px mediumslateblue;
+    box-shadow: 0 4px 10px mediumslateblue;
 }
 
-.fromCity{
-    font-size: 44px;
-    margin-top: 5px;
-}
 
-.toCity{
-    font-size: 44px;
-}
 
-.price{
+.container{
+    display: flex;
+    justify-content: space-around;
     text-align: center;
-    font-size: 36px;
+    font-weight: bold;
+    align-items: center;
+    padding-bottom: 20px;
 }
 
-.dateTime{
-    font-size: 46px;
-    margin-top: 10px;
-    text-align: center;
-    margin-bottom: 0;
-
+.container div{
+    width: 30%;
 }
 
-.timeTime{
-    font-size: 64px;
-    text-align: center;
-    margin-bottom: 0;
-}
-
-.leftItem{
-    margin-left: 10%;
-    display: inline-block;
-
-}
-
-.rightItem{
-    margin-left: 280px;
-    display: inline-block;
+.aHref{
+    font-size: 18px;
 }
 
