--- a/djangoreactproject/frontend/src/components/Search.module.css
+++ b/djangoreactproject/frontend/src/components/Search.module.css
@@ -1,24 +1,26 @@
 .inputs{
     border: none;
     height: 60px;
-    width: 15%;
+    width: 20%;
 
     text-align: center;
 
 }
 
 .inputContainer{
-    margin-left: 20%;
+    margin-left: 16%;
 }
 
 .inputRight{
-    border-radius: 0 20px 20px 0;
+    border-bottom-right-radius: 20px;
+    border-top-right-radius: 20px;
     font-size: 16px;
     font-weight: bold;
 }
 
 .inputLeft{
-    border-radius: 20px 0 0 20px;
+    border-bottom-left-radius: 20px;
+    border-top-left-radius: 20px;
     margin-left: 0%;
 }
 
